--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment2</title>
+    <script src="https://kit.fontawesome.com/5d08dd24ba.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div class="container-all">
     <section>
         <div class="container">
         <header class="header">
@@ -132,6 +134,33 @@ experiance</span></button>
         </div>
     </div>
 </main>
+<!-- contract and subscribe -->
+<section>
+<div class="contact">
+    <h2 class="flow-us">Subscribe & Contract us</h2>
+    <div class="flow">
+        <div class="social">
+            <h2>Contact & Follow</h2>
+            <div class="social-icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-solid fa-envelope"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-solid fa-phone"></i>
+        </div>
+        </div>
+    
+
+    <div class="form">
+        <h2>Subscribe</h2>
+        <form action="">
+        <input class="email" type="email" placeholder="Enter your email"><br>
+        <input class="password" type="password" placeholder="Enter your password"></form>
+        <button class="btn-primary-down" type="submit">submit</button>
+    </div>
+</div>
+</div>
+</section>
+<!-- sponsers part -->
 <div class="sponsers">
     <div class="sponsers-title"><h2>Our Sponspors</h2></div>
     <div class="sponsers-description">
@@ -149,5 +178,6 @@ experiance</span></button>
 <footer class="foot">
 <p>All rights reserved copyright@2023 startup landing page design</p>
 </footer>
+</div>
 </body>
 </html>
